[package]
name = "web_socket_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.5.0"
http-muncher = "0.2.1"
rustc-serialize = "0.3.15"
sha1 = "0.1.1"
byteorder = "1.5.0"

# [dependencies.mio]
# git = "https://github.com/carllerche/mio"